[package]
name = "hooking_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "swtor_chat_capturer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "hooking_exe"
path = "src/main.rs"

[dependencies]
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
retour = { version = "0.3", features = ["static-detour"] }
dll-syringe = "0.15.2"
ctor = "0.2.8"
windows = { version = "0.56.0", features = ["Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"]}
tracing-subscriber = "0.3.18"
log = "0.4.21"
lazy_static = "1.4.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
